hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/success/testCompilerSuccess0020_array_selectors.hl
/**
 * tested :
 *   * array selectors
 */
package net.vpc.hadralang.test:test04#1215 {
    String commonVersion="2.6";
    import package $"commons-lang:commons-lang#${commonVersion}";
}

def void main(String[] args){
    int[10] arr((i)->2*i);
    println("arr=",arr);

    int[] arr2=arr[3..9];
    println("1::arr2=",arr2);

    arr2[3..5]=arr[1..3];
    println("2::arr2=",arr2);

    arr2[(i)->i%2==0]=arr[1..3];
    println("3::arr2=",arr2);
}
