hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0016.hl
package net.vpc.hlexamples;
int z;
def main(String[] args,int z){
    int z;
    println("hello world");
    int a=z;
}